fixed spacing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -30,6 +30,7 @@ $color: #def;
 
 body {
   // background-color: $color;
+  padding-top: 70px;
 }
 
 .container {
